--- a/ClipboardHistory/ClipboardHistory/Info.plist
+++ b/ClipboardHistory/ClipboardHistory/Info.plist
@@ -22,5 +22,9 @@
     <true/>
     <key>LSMinimumSystemVersion</key>
     <string>$(MACOSX_DEPLOYMENT_TARGET)</string>
+    <key>LSApplicationCategoryType</key>
+    <string>public.app-category.utilities</string>
+    <key>NSAccessibilityUsageDescription</key>
+    <string>Clipnyx はクリップボード履歴の自動ペーストとグローバルホットキーのためにアクセシビリティ権限を使用します。</string>
 </dict>
 </plist>
