--- a/Clipnyx/Clipnyx/Info.plist
+++ b/Clipnyx/Clipnyx/Info.plist
@@ -26,5 +26,7 @@
     <string>public.app-category.utilities</string>
     <key>NSAccessibilityUsageDescription</key>
     <string>Clipnyx はクリップボード履歴の自動ペーストとグローバルホットキーのためにアクセシビリティ権限を使用します。</string>
+    <key>ITSAppUsesNonExemptEncryption</key>
+    <false/>
 </dict>
 </plist>
