String Catalogを使った英語ローカライゼーションを追加
Localizable.xcstringsとInfoPlist.xcstringsを新規作成し、全UI文字列の
英語/日本語翻訳ペアを定義。ビュー層の日本語リテラルを英語に書き換え、
モデル層のハードコード文字列をString(localized:)に変更。

--- a/Clipnyx/Clipnyx/Info.plist
+++ b/Clipnyx/Clipnyx/Info.plist
@@ -25,7 +25,7 @@
     <key>LSApplicationCategoryType</key>
     <string>public.app-category.utilities</string>
     <key>NSAccessibilityUsageDescription</key>
-    <string>Clipnyx はクリップボード履歴の自動ペーストとグローバルホットキーのためにアクセシビリティ権限を使用します。</string>
+    <string>Clipnyx uses accessibility permissions for automatic pasting and global hotkeys.</string>
     <key>ITSAppUsesNonExemptEncryption</key>
     <false/>
 </dict>
